# cs4home_hri_challenge

./: README.md  thirdparty.repos
cs4home_hri_challenge/: CMakeLists.txt  package.xml
cs4home_hri_challenge/bt_xml/: describe_person.xml  find_seat.xml  find_seat_test.xml  grab_bag.xml  greeting_guest.xml  introduce_guest.xml  transport_bag.xml
cs4home_hri_challenge/config/: params.yaml  test_params.yaml
cs4home_hri_challenge/launch/: hri_challenge.launch.py  test_sequential.launch.py
cs4home_hri_challenge/src/: DescribePersonCM.cpp  ExecuteBT.cpp  FindSeatCM.cpp  GrabBagCM.cpp  GreetingGuestCM.cpp  HRIChallengeMaster.cpp  IntroduceGuestCM.cpp  TransitionOutput.cpp  TransportBagCM.cpp
cs4home_hri_challenge/test/: test_sequential_state_machine.cpp
cs4home_receptionist/: CMakeLists.txt  package.xml
cs4home_receptionist/bt_xml/: describe_person.xml  find_seat.xml  greeting_guest.xml
cs4home_receptionist/config/: params.yaml
cs4home_receptionist/launch/: receptionist.launch.py
cs4home_receptionist/src/: DescribePersonCM.cpp  ExecuteBT.cpp  FindSeatCM.cpp  GreetingGuestCM.cpp  IntroduceGuestCM.cpp  ReceptionistMaster.cpp  TransitionOutput.cpp
