<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cs4home_hri_challenge</name>
  <version>0.0.0</version>
  <description>HRI Challenge package for CS4Home</description>
  <maintainer email="igonzf06@estudiantes.unileon.es">lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cs4home_core</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>ament_index_cpp</depend>
  <depend>lifecycle_msgs</depend>
  <depend>hri</depend>
  <depend>motion</depend>
  <depend>configuration</depend>
  <depend>perception</depend>
  <depend>attention_system</depend>
  <depend>perception_system</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
